updated some logs