@@ -15,7 +15,7 @@
     <description>MortgageService</description>
 
     <properties>
-        <java.version>17</java.version>
+        <java.version>21</java.version>
         <open.api.version>2.8.5</open.api.version>
         <map-struct.version>1.6.2</map-struct.version>
         <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
@@ -94,8 +94,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>${java.version}</source> <!-- depending on your project -->
-                    <target>${java.version}</target> <!-- depending on your project -->
+                    <source>17</source> <!-- depending on your project -->
+                    <target>17</target> <!-- depending on your project -->
                     <annotationProcessorPaths>
                         <path>
                             <groupId>org.mapstruct</groupId>
@@ -117,6 +117,7 @@
                         </path>
                         <!-- other annotation processors -->
                     </annotationProcessorPaths>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
@@ -126,6 +127,11 @@
                 <configuration>
                     <output>file</output>
                     <append>true</append>
+                    <excludes>
+                        <exclude>com/test/mortgage/configuration/*</exclude>
+                        <exclude>com/test/mortgage/model/*</exclude>
+                        <exclude>com/test/mortgage/MortgageServiceApplication.java</exclude>
+                    </excludes>
                 </configuration>
                 <executions>
                     <execution>
@@ -145,7 +151,7 @@
                         <goals>
                             <goal>check</goal>
                         </goals>
-                        <configuration>
+                            <configuration>
                             <rules>
                                 <rule>
                                     <element>BUNDLE</element>
@@ -153,12 +159,12 @@
                                         <limit>
                                             <counter>LINE</counter>
                                             <value>COVEREDRATIO</value>
-                                            <minimum>85%</minimum>
+                                            <minimum>90%</minimum>
                                         </limit>
                                         <limit>
                                             <counter>BRANCH</counter>
                                             <value>COVEREDRATIO</value>
-                                            <minimum>70%</minimum>
+                                            <minimum>80%</minimum>
                                         </limit>
                                         <limit>
                                             <counter>METHOD</counter>
@@ -168,7 +174,7 @@
                                     </limits>
                                 </rule>
                             </rules>
-                        </configuration>
+                            </configuration>
                     </execution>
                     <execution>
                         <id>jacoco-site</id>
